fix: Vertical spacing

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -49,7 +49,7 @@ body, html {
   border-radius: 10px;
   max-width: 700px;
   margin-left: 5vw;
-  margin-top: -230px;
+  margin-top: 0px;
 
 }
 
@@ -59,9 +59,9 @@ img.scrolldown-indicator-logo{
 }
 
 img.key-logo{
-  min-width: 390px;
-  max-width: 400px;
-  margin-bottom: 80px;
+  min-width: 340px;
+  max-width: 350px;
+  margin-bottom: 10px;
 }
     
 .home-content h1 {
@@ -98,7 +98,7 @@ button.btn-download {
   border: none;
   border-radius: 5px;
   position: absolute;
-  bottom: 130px;
+  bottom: 50px;
   left: 6%;
   cursor: pointer;
   font-family: "Objective-Bold", sans-serif;
